But does it blend..?